Manipulation time + correction gestion paiement

--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@nomicfoundation/hardhat-network-helpers": "^1.0.8",
     "@openzeppelin/contracts": "^4.9.2",
     "@openzeppelin/test-helpers": "^0.5.16",
     "hardhat": "^2.16.1"
