Divers correctifs pour démarrer le front

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,8 +13,12 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@rainbow-me/rainbowkit": "^1.0.5",
+    "encoding": "^0.1.13",
+    "ethers": "^6.6.3",
     "framer-motion": "^10.12.18",
+    "lokijs": "^1.5.12",
     "next": "13.4.9",
+    "pino-pretty": "^10.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "viem": "^1.2.11",
