--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "pino-pretty": "^10.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.10.1",
     "viem": "^1.2.11",
     "wagmi": "^1.3.8"
   }
