--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "next": "13.4.9",
     "pino-pretty": "^10.0.1",
     "react": "18.2.0",
+    "react-datepicker": "^4.16.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
     "viem": "^1.2.11",
