--- a/backend/package.json
+++ b/backend/package.json
@@ -3,6 +3,7 @@
     "@nomicfoundation/hardhat-network-helpers": "^1.0.8",
     "@openzeppelin/contracts": "^4.9.2",
     "@openzeppelin/test-helpers": "^0.5.16",
+    "dotenv": "^16.3.1",
     "hardhat": "^2.16.1"
   },
   "devDependencies": {
