--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "react-datepicker": "^4.16.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
+    "react-input-emoji": "^5.1.1",
     "viem": "^1.2.11",
     "wagmi": "^1.3.8"
   }
