Remplacement de sepolia par Goerli (côté frontend)

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,2 +1,3 @@
 NEXT_SEPOLIA_RPC_URL=https://sepolia.infura.io/v3/<API_KEY>
+NEXT_GOERLI_RPC_URL=https://goerli.infura.io/v3/<API_KEY>
 NEXT_PK=<PRIVATE_KEY>
